...
                                <include reference="INt-O5-s2u"/>
                            </mask>
                        </variation>
                    </view>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" id="GNU-KK-tHO">
                        <barButtonItem key="rightBarButtonItem" title="Next" id="Bw1-fH-ei3">
                            <connections>
                                <action selector="nextButtonClicked:" destination="yeq-fj-wpC" id="FSF-va-kVT"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
...
                                        </view>
                                        <size key="customSize" width="150" height="150"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="spacing">
                                                <real key="value" value="0.0"/>
                                            </userDefinedRuntimeAttribute>
                                            <userDefinedRuntimeAttribute type="image" keyPath="image" value="philosophy.jpg"/>
                                            <userDefinedRuntimeAttribute type="string" keyPath="text" value="Philosophy" localized="YES"/>
                                            <userDefinedRuntimeAttribute type="number" keyPath="tag">
                                                <integer key="value" value="0"/>
                                            </userDefinedRuntimeAttribute>
                                        </userDefinedRuntimeAttributes>
                                    </collectionViewCell>
...
                                        </view>
                                        <size key="customSize" width="150" height="150"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="spacing">
                                                <real key="value" value="0.0"/>
                                            </userDefinedRuntimeAttribute>
                                            <userDefinedRuntimeAttribute type="image" keyPath="image" value="physics.jpg"/>
                                            <userDefinedRuntimeAttribute type="string" keyPath="text" value="Physics" localized="YES"/>
                                            <userDefinedRuntimeAttribute type="number" keyPath="tag">
                                                <integer key="value" value="3"/>
                                            </userDefinedRuntimeAttribute>
                                        </userDefinedRuntimeAttributes>
                                    </collectionViewCell>
...
                                                    <action selector="undoButtonTapped" destination="BYZ-38-t0r" eventType="touchUpInside" id="dqX-9U-jLe"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qcO-dI-02D">
                                                <rect key="frame" x="60" y="7" width="67" height="32"/>
                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
                                                <state key="normal" title="Sign Out">
                                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <variation key="heightClass=regular-widthClass=compact">
                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                                </variation>
                                                <variation key="heightClass=regular-widthClass=regular">
...
                        <connections>
                            <outlet property="dataSource" destination="Gmk-04-Jz3" id="zUq-vD-LZW"/>
                            <outlet property="delegate" destination="Gmk-04-Jz3" id="FuH-rE-nTY"/>
                        </connections>
                    </tableView>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Saved Videos" id="98w-vL-fKb">
                        <barButtonItem key="leftBarButtonItem" image="settings-24.png" width="24" id="0CI-3e-SiB">
                            <connections>
                                <segue destination="xot-dE-Fw7" kind="show" identifier="goToSettings" id="NF1-XQ-cTM"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="action" id="GTZ-TJ-VWa">
...
                            <constraint firstItem="gcn-R2-jrU" firstAttribute="leading" secondItem="H1K-li-Agk" secondAttribute="leading" id="dmA-0S-lG1"/>
                            <constraint firstItem="dPA-lS-vIK" firstAttribute="top" secondItem="gcn-R2-jrU" secondAttribute="bottom" id="npZ-my-enJ"/>
                            <constraint firstItem="gcn-R2-jrU" firstAttribute="top" secondItem="Jfn-qg-Ujf" secondAttribute="bottom" id="twE-hO-YXj"/>
                        </constraints>
                    </view>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Settings" id="oPO-30-M04"/>
                    <connections>
                        <outlet property="tableView" destination="gcn-R2-jrU" id="XAk-sQ-wu2"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="XVf-bU-qH6" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
...
            <point key="canvasLocation" x="2201" y="1029"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="9xa-kQ-Yed">
            <objects>
                <navigationController storyboardIdentifier="NavigationController" automaticallyAdjustsScrollViewInsets="NO" id="NwA-Qr-Jcm" customClass="NavigationController" customModule="YoutubeApp" customModuleProvider="target" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" systemItem="search" id="xA1-f2-Fhm" userLabel="Discover"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="r5I-WZ-Txs">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
